# raspberry_pie_camera_capture

./: .gitignore  CHANGES.md  FILE_STRUCTURE.md  GScrop  LICENSE  QUICKSTART.md  RASPI-SETUP.md  README.md  TESTING.md  auto-activate.sh  camera-service.sh  check-camera-env.py  cleanup.sh  clear-camera-locks.sh  comprehensive_test.py  config.yaml  deploy.sh  fix_ram_buffer_access.py  fix_recording.sh  fix_video_output.sh  high_fps_camera_recorder.py  install-low-memory.sh  install-service.sh  install.sh  pull_request.md  raspi-capture-service.sh  raspie-camera-service.sh  raspie-camera.service  raspie-capture-service.sh  raspie-optimize.sh  raspie-service-manager.sh  requirements.txt  rpi-camera-service.sh  rpi-camera.service  run-camera-recorder.sh  run-camera.sh  run_camera.sh  setup-camera.sh  setup.cfg  setup.py  (+11 more)
.cursor/rules/: script-generation.mdc
config/: config.yaml  config.yaml.example  imx296-camera.service
desktop/: Camera-Dashboard.desktop  README.md  create_dashboard.sh  dashboard.sh
docs/: IMPLEMENTATION_STATUS.md  bin_readme.md
examples/: README.md  run_visualizers.sh  run_with_visualizers.py
output/: camera_markers.txt
raspberry_pi_lsl_stream/: camera_stream.py  cli.py  gui.py
scripts/: README.md  camera-service.sh  check_recording.sh  diagnose_camera.sh  diagnose_imx296.sh  run-camera.sh  update_camera_stream.sh  view-camera-status.sh
setup/: README.md  configure_imx296_service.sh  imx296-camera-monitor.service  install.sh  requirements.txt
src/imx296_gs_capture/: __init__.py  imx296_capture.py  ntfy_handler.py  video_recorder.py
src/raspberry_pi_lsl_stream/: __init__.py  analyze_videos.py  audio_stream.py  buffer_trigger.py  camera_capture.py  camera_lock.py  camera_stream.py  camera_stream_fixed.py  check_environment.py  cli.py  config_loader.py  convert_video.py  status_display.py  status_file.py  verify_video.py  view_stream.py
tests/: README.md  run_tests.py  test_camera_trigger.py  test_cleanup_system.py  test_gscrop_integration.py  test_integrated_system.py  test_simple_integration.py  test_status_monitor.py
tests/unit/: test_audio_stream.py  test_camera_stream.py
