[metadata]
name = raspberry-pi-lsl-stream
version = attr: raspberry_pi_lsl_stream._version.__version__
author = Your Name
author_email = your.email@example.com
description = Stream Raspberry Pi camera data via LSL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/raspberry_pi_lsl_stream # Replace with your repo URL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License # Or choose another license
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # Dependencies will be listed here, see requirements.txt
    pylsl
    numpy
    # picamera2 # <-- Temporarily comment out or use marker
    picamera2; sys_platform == 'linux' # <-- Install only on Linux
    opencv-python
    PySide6

[options.entry_points]
console_scripts =
    rpi-lsl-stream = raspberry_pi_lsl_stream.cli:main

[options.packages.find]
where = . 