[metadata]
name = raspberry-pi-lsl-stream
# version = attr: raspberry_pi_lsl_stream.__version__ # Commenting out attr
version = 0.1.0
author = Your Name # Replace with your name
author_email = your_email@example.com # Replace with your email
description = Stream Raspberry Pi camera data via LSL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/raspberry_pi_lsl_stream # Replace with your repo URL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License # Or choose another license
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # Dependencies required for basic operation on any platform
    pylsl
    numpy
    opencv-python
    # picamera2 is NOT listed here anymore, handled by extras or system install
    # PySide6 is removed as it's not used by the core streamer

[options.extras_require]
# Define optional dependencies for specific platforms or features
pi =
    picamera2 # Declares picamera2 as part of the 'pi' extra
    # Add other pi-specific dependencies here if needed in the future

[options.entry_points]
console_scripts =
    rpi-lsl-stream = raspberry_pi_lsl_stream.cli:main
    verify-lsl-video = raspberry_pi_lsl_stream.verify_video:main

[options.packages.find]
where = src 